# lit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.py  bytecode.c  chunk.lbc  hello  install_manifest.txt  lit  main.lit  test  test.lbc  test.lit  test.py  test.txt  test_module.lit  todo.md
.github/workflows/: build_windows.yml  ccpp.yml  run_tests.yml
assets/: language_lit.lua
html/: build_html.sh  light_build.sh  run_server.sh  shell.html
html/glue/: glue.c
include/: lit.hpp
include/lit/: lit.h  lit.hpp  lit_common.h  lit_config.h  lit_predefines.h
include/lit/api/: lit_api.h  lit_calls.h
include/lit/cli/: lit_cli.h
include/lit/debug/: lit_debug.h
include/lit/emitter/: lit_emitter.h
include/lit/event/: lit_event.h
include/lit/mem/: lit_mem.h
include/lit/optimizer/: lit_optimizer.h
include/lit/parser/: lit_ast.h  lit_error.h  lit_parser.h
include/lit/preprocessor/: lit_preprocessor.h
include/lit/scanner/: lit_scanner.h  lit_token.h
include/lit/state/: lit_state.h
include/lit/std/: lit_core.h  lit_file.h  lit_gc.h  lit_json.h  lit_math.h  lit_network.h  lit_time.h
include/lit/std/raw/: http.lit  promise.lit
include/lit/un/parser/: un_parser.h  un_token.h
include/lit/un/scanner/: un_scanner.h
include/lit/util/: lit_array.h  lit_color.h  lit_fs.h  lit_table.h  lit_utf.h
include/lit/vm/: lit_chunk.h  lit_instruction.h  lit_object.h  lit_opcodes.h  lit_value.h  lit_vm.h
lens/: test.lit
src/: main.c
src/lit/: lit.c  lit_config.c
src/lit/api/: lit_api.c  lit_calls.c
src/lit/cli/: main.c
src/lit/debug/: lit_debug.c
src/lit/emitter/: lit_emitter.c
src/lit/event/: lit_event.c
src/lit/mem/: lit_mem.c
src/lit/optimizer/: lit_optimizer.c
src/lit/parser/: lit_ast.c  lit_error.c  lit_parser.c
src/lit/preprocessor/: lit_preprocessor.c
src/lit/scanner/: lit_scanner.c
src/lit/standalone/: main.c
src/lit/state/: lit_state.c
src/lit/std/: lit_core.c  lit_file.c  lit_gc.c  lit_json.c  lit_math.c  lit_network.c  lit_time.c
src/lit/std/compiled/: README.md
src/lit/std/json/: lit_json.c
src/lit/un/parser/: un_parser.c
src/lit/un/scanner/: un_scanner.c
src/lit/util/: lit_array.c  lit_fs.c  lit_table.c  lit_utf.c
src/lit/vm/: lit_chunk.c  lit_object.c  lit_value.c  lit_vm.c
test/: module.lit
test/api/: map.lit  string.lit
test/challenges/: find_longest_sub_array.lit  find_sub_arrays.lit  find_sum_pairs.lit
test/examples/: modules.lit
test/examples/libs/: example_library.lit
test/expression/: array.lit  binary.lit  compound.lit  field.lit  grouping.lit  ignoring_invoke.lit  interpolation.lit  lambda.lit  map.lit  require.lit  unary.lit
test/statement/: block.lit  break.lit  class.lit  continue.lit  for.lit  function.lit  if.lit  print.lit
tests/: README.md
tests/api/: array.lit  fiber.lit  http.lit  json.lit  map.lit  string.lit  timer.lit
tests/benchmarks/: fib.py
tests/benchmarks/binary_trees/: benchmark.lit  benchmark.lua  benchmark.py
tests/benchmarks/c_call/: benchmark.lit
tests/benchmarks/fib/: benchmark.lit
tests/benchmarks/for/: benchmark.lit  benchmark.lua  benchmark.py
tests/benchmarks/lit_call/: benchmark.lit
tests/benchmarks/lua/: fib.lua
tests/benchmarks/sort/: benchmark.lit  benchmark.lua  benchmark.py
tests/benchmarks/sort_custom/: benchmark.lit  benchmark.lua  benchmark.py
tests/challenges/: merge_arrays.lit
tests/edgecases/: call_super_method.lit  fiber_this_upvalue.lit  this_upvalue.lit
tests/examples/: README.md  control_flow.lit  fibers.lit  functions.lit  hello_world.lit  interpolation.lit  modules.lit  operator_overloading.lit  syntax_sugar.lit  values.lit
tests/examples/libs/: example_library.lit
tests/expressions/: binary.lit  compound.lit  ignoring_invoke.lit  map.lit  ref.lit  require.lit  require_modules.lit  var.lit
tests/expressions/folder/: module.lit  printer.lit
tests/fixed/: argument_reverse.lit  constant_addition.lit  double_free.lit  fib.lit  return_value.lit  while_decrement.lit
tests/statements/: class.lit  continue.lit  for.lit  function.lit  macros.lit  operator_overload.lit  while.lit
tests/un/: main.un
tools/: run_tests.sh  test.py
util/: CMakeLists.txt  embed_file.c  embedfile
wiki/: docusaurus.config.js  package.json
wiki/docs/: bytecode.md  cli_arguments.md  getting_started.md
wiki/docs/0_getting_started/: 0_getting_started.md  0_syntax.md  1_values.md  2_variables.md  3_control_flow.md  4_functions.md  5_classes.md  6_fibers.md  7_modules.md
wiki/docs/core_module/: array.md  core_module.md  fiber.md  object.md
wiki/docs/file_module/: directory.md  file.md  file_module.md
wiki/docs/gc_module/: gc.md  gc_module.md
wiki/docs/math_module/: math_module.md  random.md
wiki/docs/modules/: modules.md
wiki/docs/modules/core_module/: array.md  bool.md  class.md  core_module.md  fiber.md  function.md  map.md  module.md  number.md  range.md  string.md
wiki/docs/modules/file_module/: directory.md  file.md  file_module.md
wiki/docs/modules/gc_module/: gc.md  gc_module.md
wiki/docs/modules/math_module/: math.md  math_module.md  random.md
wiki/src/pages/: index.js
